--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(images/Back.jpg);
+	background-image: url(images/back.jpg);
 	background-repeat: no-repeat;
 	background-position: top;
 	background-size: cover;
